# cdcEngineDXHR

./: CMakeLists.txt  DXHRDC.shad  README.md  RingBuffer.cpp  RingBuffer.h  UIActions.h  alc_beer_bottle_a.drm  config.h.in  dxvk-build-linux32.txt  dxvk-meson.patch  linux_main.cpp  main.cpp  main2.cpp  main2.h  mainloop.cpp  mainloop.h  matrix.cpp  objtree.txt  pickup_dns_156600946691c80e_dx11.drm  spinnycube.cpp  spinnycube.h  types.h
adt/: LinkedList.h  Vector.h
allocator/: AllocGlobals.h  Allocator.h  CMakeLists.txt  GameHeapAllocator.cpp  GameHeapAllocator.h  ThreadSafeMemHeapAllocator.cpp  ThreadSafeMemHeapAllocator.h
animation/: AnimAdditiveLookAtNode.h  AnimAutoHostedNode.h  AnimBlendNode.h  AnimBlendValueNode.h  AnimBoneControllerNode.h  AnimBoneSetNode.h  AnimComponent.h  AnimConditionalFragmentNode.h  AnimDrivenRagdollNode.h  AnimDynamicFragmentNode.h  AnimEmptyFragmentNode.h  AnimExitStateNode.h  AnimFaceFxNode.h  AnimFragmentNode.h  AnimHostedNode.h  AnimInstanceHostedNode.h  AnimInterpNode.h  AnimLookAtNode.h  AnimMirrorExtendedNode.h  AnimMirrorNode.h  AnimModifierNode.h  AnimOverlayNode.h  AnimPipelineNode.h  AnimQuadrupedRNode.h  AnimRagdollDataNode.h  AnimRagdollNode.h  AnimSmartFragmentNode.h  AnimSmartHostedNode.h  AnimSmartMovementNode.h  AnimSmartVariableNode.h  AnimSyncNode.h  AnimTransientStateNode.h  DX3AnimRagdollDataNode.h  IAnimGraphMessageListener.h  IAnimGraphNode.h  RandomTarget.h
bfx/: AreaHandlePath.h  BinaryReplayLogOut.h  BoxObstacle.h  CreateObstacleTask.h  CreatePolylinePathTask.h  DefaultWarningLog.h  DestroyObstacleTask.h  HLink.h  HandleTargetBase.h  Idle.h  IdleImpl.h  InstanceComponent.h  Jumper.h  JumperImpl.h  LinkBase.h  LinkFlowBase.h  LinkFlowImpl.h  LinkImpl.h  LinkStripImpl.h  Locomoter.h  LocomoterImpl.h  LogDevice.h  MSurfer.h  MotionBase.h  MovementInstance.h  MoverBase.h  MoverImpl.h  MoverReplayManager.h  MoverReplayManagerImpl.h  MoverSpaceComponent.h  ObstacleImpl.h  Path.h  Planner.h  PlannerInstance.h  PlannerReplayManager.h  PlannerReplayManagerImpl.h  PolylinePath.h  Puppet.h  PuppetImpl.h  RemoteFunctionCaller.h  (+23 more)
camera/: AnchoredCamera.h  AutoSplineCamera.h  CMakeLists.txt  CameraDrawWrapper.h  CameraManager.cpp  CameraManager.h  CameraModeLyingDown.h  CameraModeOperation.h  CameraMode_CameraBone.h  CameraMode_Combat.h  CameraMode_Cover.h  CameraMode_Dialog.h  CameraMode_Hacking.h  CameraMode_IronSight.h  CameraMode_Ladder.h  CameraMode_Orbit.h  CameraOperation.h  CameraOperation_AnimationDOF.h  CameraOperation_AnimationFOV.h  CameraOperation_Blend.h  CameraOperation_Block.h  CameraOperation_CrossBlend.h  CameraOperation_FreeLook.h  CameraOperation_HorizontalFOV.h  CameraOperation_LocalSpaceOffset.h  CameraOperation_MultiBlend.h  CameraOperation_PreventTargetHiding.h  CameraOperation_ResolveContacts.h  CinematicCamera.h  (+13 more)
game/: Billboard.cpp  Billboard.h  CMakeLists.txt  CoronasManager.h  DX3Player.cpp  DX3Player.h  DeferredRenderingObject.cpp  DeferredRenderingObject.h  DistanceFade.cpp  DistanceFade.h  Gameloop.cpp  Gameloop.h  GlobalParamManager.cpp  GlobalParamManager.h  Impulse.cpp  Impulse.h  LensFlareAndCoronaID.cpp  LensFlareAndCoronaID.h  LogicInput.cpp  LogicInput.h  Main.cpp  Main.h  ObjectiveManager.cpp  ObjectiveManager.h  PackedVector.cpp  PackedVector.h
game/AI/: GoapPlanner.h
game/Actor/: InventoryNPC.h  InventoryPlayer.cpp  InventoryPlayer.h  InventorySystem.h
game/Animation/AnimNodes/: AnimAdditiveLookAtNode.h  AnimBlendValueNode.h  AnimConditionalFragmentNode.h  AnimDynamicFragmentNode.cpp  AnimDynamicFragmentNode.h  AnimLookAtNode.h  AnimSmartFragmentNode.h  AnimSmartVariableNode.h  DX3AnimRagdollDataNode.h
game/Conversation/: BriefingManager.cpp  BriefingManager.h  ConversationActor.h  ConversationActorPlayer.h  ConversationBase.cpp  ConversationBase.h  ConversationBriefing.cpp  ConversationBriefing.h  ConversationGraph-inl.h  ConversationGraph.h  ConversationGraphNode.h  ConversationGraphNodes.cpp  ConversationGraphNodes.h  ConversationManager.cpp  ConversationManager.h  ConversationTier1.h  ConversationTier2.h  Inspector.cpp
game/dtp/: conversation.h  modularhuman.h  objective.h  pickup.h
game/dtp/animnodes/: dynamicfragment.h
game/dtp/objecttypes/: globaldatabase.h  globalloading.h  globalplayerinfo.h
game/objects/: UberObject_DX3.cpp  UberObject_DX3.h  objects.cpp  objects.h
game/script/game/: CMakeLists.txt  NsAlarmPanelMovieController.cpp  NsAlarmPanelMovieController.h  NsAugmentationWheelMovieController.cpp  NsAugmentationWheelMovieController.h  NsBombMovieController.cpp  NsBombMovieController.h  NsBombTimerCinematicMovieController.cpp  NsBombTimerCinematicMovieController.h  NsBrieferMovieController.cpp  NsBrieferMovieController.h  NsCinematicCommentaryOverlayMovieController.cpp  NsCinematicCommentaryOverlayMovieController.h  NsCinematicPauseMenuMovieController.cpp  NsCinematicPauseMenuMovieController.h  NsCodeCollectorMovieController.cpp  NsCodeCollectorMovieController.h  NsConfigMovieController.cpp  NsConfigMovieController.h  NsContextualActionsMovieController.cpp  NsContextualActionsMovieController.h  NsContextualLegendsMovieController.cpp  NsContextualLegendsMovieController.h  NsConversationChoiceMovieController.cpp  NsConversationChoiceMovieController.h  NsDLCPopupMovieController.cpp  NsDLCPopupMovieController.h  NsDamageArrowsMovieController.cpp  NsDamageArrowsMovieController.h  NsDeathMenuMovieController.cpp  NsDeathMenuMovieController.h  NsDebugMenuMovieController.cpp  NsDebugMenuMovieController.h  NsDedicatedTerminalMovieController.cpp  NsDedicatedTerminalMovieController.h  NsDefectiveHUDMovieController.cpp  NsDefectiveHUDMovieController.h  NsE3GameIntroMovieController.cpp  NsE3GameIntroMovieController.h  NsEmailsMovieController.cpp  (+120 more)
game/ui/: CMakeLists.txt  Menu.h  NsPopupRequest.cpp  NsPopupRequest.h  ui.cpp  ui.h
game/ui/FakeScaleform/: fakescaleform.cpp  fakescaleform.h  mainmenu.cpp  popups.cpp
game/ui/Scaleform/: IScaleformMovieInstance.h  ScaleformManager.cpp  ScaleformManager.h  ScaleformMovie.h  ScaleformMovieInstance.cpp  ScaleformMovieInstance.h
(+857 files in other folders)
